crates/strider-analyze/tests/snapshots/v2__x86_kernel__stack__recursive_stack_growth.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401290:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "10" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="φ ST0", shape=house, fillcolor="#163030"];
  "10" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ EDX", shape=house, fillcolor="#163030"];
  "10" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v21" [color="#888888", style=dashed];
  "v21" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ EAX", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v34" [color="#888888", style=dashed];
  "v34" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "36" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "35" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x4012a2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
